# team-availability-matrix

./: .gitignore  README.md  constitution.md  docker-compose.yml
.github/: copilot-instructions.md
.github/agents/: coder.agent.md  designer.agent.md  dev-coder.agent.md  dev-designer.agent.md  dev-orchestrator.agent.md  dev-planner.agent.md  manager.agent.md  orchestrator.agent.md  planner.agent.md  product-owner.agent.md  spec-bugfix-scribe.agent.md  spec-code-inspector.agent.md  spec-jira-connector.agent.md  spec-orchestrator.agent.md  spec-planner.agent.md  spec-product-area-scribe.agent.md  spec-rebrush.agent.md  spec-scribe-bugfix.agent.md  spec-scribe-rebrush.agent.md  spec-scribe-story.agent.md  spec-scribe-tech-initiative.agent.md  spec-status.agent.md  spec-tech-initiative-scribe.agent.md
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile
backend/src/: auth.rs  db.rs  error.rs  helpers.rs  main.rs  models.rs  router.rs  state.rs
backend/src/handlers/: admin_teams.rs  admin_users.rs  auth.rs  health.rs  holidays.rs  locations.rs  matrix.rs  mod.rs  permissions.rs  profile.rs  settings.rs  teams.rs  work_schedules.rs
backend/src/types/: mod.rs  requests.rs  responses.rs
docs/: index.md
docs/design-system/: design-tokens.md
docs/technical-initiatives/: 2026-03-19-001-change-frontend-from-angular-to-react.md  2026-03-22-001-remove-sqlite-completely
frontend/: Dockerfile  angular.json  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
specs/: index.md
(+364 files in other folders)
