[package]
name = "availability-matrix-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = { version = "0.5", features = ["std"] }
axum = { version = "0.7", features = ["macros", "multipart"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
dotenvy = "0.15"
jsonwebtoken = "9"
rand_core = { version = "0.6", features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
